# ppnm-2022

./: .gitignore  LICENSE  README.md
exam/: Makefile  README.md  eig_spectrum.gpi  out.txt  timing.gpi
exam/data/: eig_spectrum.txt  fitting.txt  timing.txt
exam/doc/: report.tex
exam/src/: main.cs
exam/src/lib/: eig.cs  least_squares.cs  matrix.cs  roots.cs  vector.cs
exercises/complex/c/: Makefile
exercises/complex/cs/: Makefile  main.cs  out.txt
exercises/epsilon/c/: Makefile  main.c  out.txt
exercises/epsilon/cs/: Makefile  main.cs  out.txt
exercises/hello/c/: Makefile  hello.c  out.txt
exercises/hello/cs/: Makefile  hello.cs
exercises/integration/cs/: Makefile  main.cs  out.txt  plot.gpi
exercises/integration/cs/lib/: ode.cs
exercises/io/c/: Makefile  read_stdin.c
exercises/io/cs/: Makefile  read_cmdline.cs  read_file.cs  read_stdin.cs
exercises/latex/cs/: Makefile  main.cs  out.txt  plot.gpi  report.tex
exercises/math/c/: main.c  out.txt
exercises/math/cs/: Makefile  main.cs  out.txt
exercises/math/cs/src/: cmath.cs
exercises/multiprocessing/c/: Makefile  out.txt
exercises/multiprocessing/c/include/: harmonic_sum.h
exercises/multiprocessing/c/src/: harmonic_sum.c  main.c
exercises/multiprocessing/cs/: Makefile  main.cs  out.txt
exercises/odeint/cs/: Makefile  main.cs
exercises/passf/cs/: Makefile  main.cs  out.txt
exercises/vector3d/c/vector/: Makefile  vector.c  vector.h
exercises/vector3d/cs/: Makefile  main.cs  vector3d.cs
homeworks/eigenvalues/cs/A/: Makefile  main.cs  out.txt
homeworks/eigenvalues/cs/B/: Makefile  main.cs  out.txt  plot.txt  plot_n.txt  plot_r.txt
homeworks/eigenvalues/cs/C/: Makefile  exerciseC.txt  main.cs
homeworks/generic_list/cs/A/: genlist.cs  input.txt  main.cs  out.txt
homeworks/generic_list/cs/B/: Makefile  genlist.cs  main.cs  out.txt
homeworks/generic_list/cs/C/: Makefile  linkedlist.cs  main.cs  out.txt
homeworks/interpolation/c/: Makefile  exerciseB.txt  exerciseC.txt  out2.txt  out3.txt
homeworks/interpolation/c/include/: linterp.h  qspline.h
homeworks/interpolation/cs/: Makefile  main.cs  xy_data.txt
homeworks/interpolation/cs/A/: Makefile  exerciseA.txt
homeworks/interpolation/cs/B/: main.cs  out2.txt
homeworks/interpolation/cs/C/: exerciseC.txt  main.cs  out3.txt  xy_data.txt
homeworks/interpolation/cs/src/: cspline.cs  qspline.cs
homeworks/io/c/: read_cmdline.c  read_file.c  write_data.c  write_data.h
homeworks/io/cs/: Makefile  input.txt  main.cs  outA.txt  outB.txt
homeworks/linear_equations/c/: Makefile  exerciseC.txt  out.txt
homeworks/linear_equations/cs/: Makefile  main.cs  out.txt
homeworks/splines/c/: Makefile  exerciseA.txt  main  main.c  out1.txt  xy_data.txt
homeworks/vec/cs/: Makefile  main.cs  out.txt
matlib/cpp/: .gitignore  CMakeLists.txt  main.cpp
matlib/cpp/cmake/: FindUnitTest++.cmake
matlib/cpp/include/: gram_schmidt.hpp  least_squares.hpp  matrix.hpp
matlib/cpp/src/: CMakeLists.txt  gram_schmidt.cpp  least_squares.cpp  matrix.cpp
matlib/cpp/tests/: gram_schmidt_test.cpp  main.cpp  matrix_test.cpp
matlib/rs/: .gitignore  Cargo.toml
matlib/rs/src/: lib.rs  main.rs  matrix.rs
(+150 files in other folders)
